--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="card">
                 <div class="front">
                     <div class="cover">
-                        <img src="images/2.jpeg"/>
+                        <img src="http://i.imgur.com/J1K5MJa.jpg"/>
                     </div>
                     <div class="user">
                         <img class="img-circle" src="https://pbs.twimg.com/profile_images/378800000606444541/ac300c93a19ac5e28e8a92462f3a77f2_400x400.jpeg"/>
