--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body class="bg">
-    <div class="container" style="width: 350px; z-index: 999999; position: relative;">
+    <div class="container" style="width: auto; position: relative;">
         <div class="card-container">
             <div class="card">
                 <div class="front">
