viewport meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Viral Jogani - Developer + Designer</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/rotating-card.css" rel="stylesheet" />
