--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <p><strong>Designed <a id="sci"href="http://app.viraljogani.com/">SoundCloud Instant</a></strong></p>
 
                             <br><h4 class="text-center">Skills</h4>
-                            <p>HTML, CSS, JavaScript (in progress), Java, C++, Photoshop, Sketch, </p>
+                            <p>HTML, CSS, JavaScript (in progress), Java, C++, Photoshop, Sketch.</p>
                         </div>
                     </div>
                     <div class="footer">
