--- a/index.html
+++ b/index.html
@@ -1,63 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <title>Viral Jogani - Developer + Designer</title>
-    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <link href="css/bootstrap.css" rel="stylesheet" />
-    <link href="css/rotating-card.css" rel="stylesheet" />
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+	<title>Viral Jogani</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1"/>
+	<meta name="author" content="Viral Jogani">
+	<meta name="description" content="Viral Jogani is studying Computer Engineering at Rutgers University. His passions include technology, entrepreneurship, design, and reading.">
+	<link href="./css/style.css" rel="stylesheet" type="text/css">
+	<link href="./css/MyFontsWebfontsKit.css" rel="stylesheet" type="text/css">
 </head>
-<body class="bg">
-    <div class="container" style="width: auto; position: relative;">
-        <div class="card-container">
-            <div class="card">
-                <div class="front">
-                    <div class="cover">
-                        <img src="http://i.imgur.com/J1K5MJa.jpg"/>
-                    </div>
-                    <div class="user">
-                        <img class="img-circle" src="https://pbs.twimg.com/profile_images/521828928462143488/gsiw6Xl6.jpeg"/>
-                    </div>
-                    <div class="content">
-                        <div class="main">
-                            <h3 class="name">Viral Jogani</h3>
-                            <p class="profession">Developer + Designer</p>
-                            <h5><i class="fa fa-building-o fa-fw text-muted"></i> ECE 2017 @ Rutgers </h5>
-                            <h5><i class="fa fa-map-marker fa-fw text-muted"></i> Edison, NJ </h5>
-                            <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> viraljogani@gmail.com </h5>
-                        </div>
-                    </div>
-                </div> <!-- end front panel -->
-                <div class="back">
-                    <div class="header">
-                        <h5 class="motto">"Man cannot remake himself without suffering, for he is both the marble and the sculptor."</h5>
-                    </div> 
-                    <div class="content">
-                        <div class="main">
-                            <h4 class="text-center">Experience</h4>
-                                <p><strong>Technical Intern at <a id="sd" href="https://seamlessdocs.com/">SeamlessDocs</a></strong></p>
-                                <p><strong>Writer on <a id="sv" href="http://blog.viraljogani.com/">Svbtle</a></strong> + <strong><a id="md" href="http://medium.com/@virjog">Medium</a></strong></p>
-                                <p><strong>Designed <a id="sci"href="http://app.viraljogani.com/">SoundCloud Instant</a></strong></p>
+<body>
+	<div class="about">
+		<p class="NeueHaasUnicaPro-Regular">Hey there!</p>
 
-                            <br><h4 class="text-center">Skills</h4>
-                            <p>HTML, CSS, JavaScript (in progress), Java, C++, Photoshop, Sketch.</p>
-                        </div>
-                    </div>
-                    <div class="footer">
-                        <div class="social-links text-center">
-                            <a href="http://facebook.com/virjog" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                            <a href="https://plus.google.com/116656466772789179744" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                            <a href="http://twitter.com/virjog" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
-                            <a href="http://github.com/virjog" class="github"><i class="fa fa-github fa-fw"></i></a>
-                            <a href="http://linkedin.com/in/viraljogani" class="linkedin"><i class="fa fa-linkedin fa-fw"></i></a>
-                        </div>
-                    </div>
-                </div> <!-- end back panel -->
-            </div> <!-- end card -->
-        </div> <!-- end card-container -->
-    </div>
+		<p class="NeueHaasUnicaPro-Regular">My name is Viral Jogani, and I'm studying Electrical and Computer Engineering at <a href="http://rutgers.edu">Rutgers University</a>.</p>
+
+		<p class="NeueHaasUnicaPro-Regular">Outside of school, I'm a designer and front-end web developer, who has designed mobile apps and built websites for startups such as <a href="http://socialblood.org">Socialblood</a>, <a href="http://tennisbuddyapp.com">Tennis Buddy</a>, and <a href="http://seamlessdocs.com">SeamlessDocs</a>.</p>
+
+		<p class="NeueHaasUnicaPro-Regular">Check out some of my work on <a href="http://dribbble.com/virjog">Dribbble</a> and <a href="http://github.com/virjog">GitHub</a>, or view my <a href="./Viral+Jogani+Resume.pdf">resume</a>.</p>
+
+		<!-- <p>Read what Viral has to say about startups in India, </p> -->
+
+		<p class="NeueHaasUnicaPro-Regular">Feel free to tweet me <a href="http://twitter.com/virjog">@virjog</a> or drop me an email at <a href="mailto:viraljogani@gmail.com">viraljogani@gmail.com</a>.</p>
+	</div>
+	<figure><img></img></figure>
 </body>
 </html>
