--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
 		<p class="NeueHaasUnicaPro-Regular">Feel free to tweet me <a href="http://twitter.com/virjog">@virjog</a> or drop me an email at <a href="mailto:viraljogani@gmail.com">viraljogani@gmail.com</a>.</p>
 	</div>
 	<figure><img></img></figure>
+	
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51353397-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
