--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<p class="animated zoomIn NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 2s;">Outside of school, I'm a designer and front-end web developer, who has designed mobile apps and built websites for startups such as <a href="http://socialblood.org">Socialblood</a>, <a href="http://tennisbuddyapp.com">Tennis Buddy</a>, and <a href="http://seamlessdocs.com">SeamlessDocs</a>.</p>
 
-		<p class="animated zoomIn NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 3s;">Check out some of my work on <a href="http://dribbble.com/virjog">Dribbble</a> and <a href="http://github.com/virjog">GitHub</a>, or view my <a href="./Viral+Jogani+Resume.pdf">resume</a>.</p>
+		<p class="animated zoomIn NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 3s;">Check out some of my work on <a href="http://dribbble.com/virjog">Dribbble</a> and <a href="http://github.com/virjog">GitHub</a>, or view my <a href="./ViralJoganiResume.pdf">resume</a>.</p>
 
 		<!-- <p>Read what Viral has to say about startups in India, </p> -->
 
