--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
 	<meta name="author" content="Viral Jogani">
 	<meta name="description" content="Viral Jogani is studying Computer Engineering at Rutgers University. His passions include technology, entrepreneurship, design, and reading.">
 	<link href="./css/style.css" rel="stylesheet" type="text/css">
-	<link href="./css/animate.css" rel="stylesheet" type="text/css">
 	<link href="./css/MyFontsWebfontsKit.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="about">
-		<p class="animated slideInUp NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 0.5s;">Hey there!</p>
+		<p class="NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 0.5s;">Hey there!</p>
 
-		<p class="animated zoomIn NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 1s;";>My name is Viral Jogani, and I'm studying Electrical and Computer Engineering at <a href="http://rutgers.edu">Rutgers University</a>.</p>
+		<p class="NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 1s;";>My name is Viral Jogani, and I'm studying Electrical and Computer Engineering at <a href="http://rutgers.edu">Rutgers University</a>.</p>
 
-		<p class="animated zoomIn NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 2s;">Outside of school, I'm a designer and front-end web developer, who has designed mobile apps and built websites for startups such as <a href="http://socialblood.org">Socialblood</a>, <a href="http://tennisbuddyapp.com">Tennis Buddy</a>, and <a href="http://seamlessdocs.com">SeamlessDocs</a>.</p>
+		<p class="NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 2s;">Outside of school, I'm a designer and front-end web developer, who has designed mobile apps and built websites for startups such as <a href="http://socialblood.org">Socialblood</a>, <a href="http://tennisbuddyapp.com">Tennis Buddy</a>, and <a href="http://seamlessdocs.com">SeamlessDocs</a>.</p>
 
-		<p class="animated zoomIn NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 3s;">Check out some of my work on <a href="http://dribbble.com/virjog">Dribbble</a> and <a href="http://github.com/virjog">GitHub</a>, or view my <a href="./ViralJoganiResume.pdf">resume</a>.</p>
+		<p class="NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 3s;">Check out some of my work on <a href="http://dribbble.com/virjog">Dribbble</a> and <a href="http://github.com/virjog">GitHub</a>, or view my <a href="./ViralJoganiResume.pdf">resume</a>.</p>
 
 		<!-- <p>Read what Viral has to say about startups in India, </p> -->
 
-		<p class="animated zoomIn NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 4s;">Feel free to tweet me <a href="http://twitter.com/virjog">@virjog</a> or drop me an email at <a href="mailto:viraljogani@gmail.com">viraljogani@gmail.com</a>.</p>
+		<p class="NeueHaasUnicaPro-Regular" style="-webkit-animation-delay: 4s;">Feel free to tweet me <a href="http://twitter.com/virjog">@virjog</a> or drop me an email at <a href="mailto:viraljogani@gmail.com">viraljogani@gmail.com</a>.</p>
 	</div>
-	<figure><img class="animated fadeIn" style="-webkit-animation-duration: 3s;"></img></figure>
+	<figure><img style="-webkit-animation-duration: 3s;"></img></figure>
 	
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
